# triton-fused-ops

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.kiro/specs/project-standardization/: design.md  requirements.md  tasks.md
.kiro/specs/triton-fused-operators/: design.md  requirements.md  tasks.md
changelog/: 2025-02-13_project-infrastructure.md
examples/: basic_usage.py  benchmark_example.py  fp8_gemm_example.py  gated_mlp_example.py  rmsnorm_rope_example.py
tests/: __init__.py  conftest.py  test_autotuner.py  test_benchmark.py  test_code_quality.py  test_edge_cases.py  test_fp8_gemm.py  test_fp8_quantize.py  test_gated_mlp.py  test_rmsnorm_rope.py
tests/benchmarks/: __init__.py  bench_fp8_gemm.py  bench_gated_mlp.py  bench_rmsnorm_rope.py
triton_ops/: __init__.py  api.py  exceptions.py  models.py  validation.py
triton_ops/autotuner/: __init__.py  cache.py  configs.py  tuner.py
triton_ops/benchmark/: __init__.py  correctness.py  report.py  suite.py
triton_ops/kernels/: __init__.py  fp8_gemm.py  fp8_quantize.py  gated_mlp.py  rmsnorm_rope.py
