[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-fused-ops"
version = "0.1.0"
description = "High-performance Triton operators for Transformer models with operator fusion and FP8 quantization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Triton Fused Ops Team", email = "triton-fused-ops@example.com"}
]
maintainers = [
    {name = "Triton Fused Ops Team", email = "triton-fused-ops@example.com"}
]
keywords = [
    "triton",
    "cuda",
    "gpu",
    "transformer",
    "fp8",
    "quantization",
    "operator-fusion",
    "deep-learning",
    "machine-learning",
    "rmsnorm",
    "rope",
    "gated-mlp",
    "gemm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/triton-fused-ops/triton-fused-ops"
Documentation = "https://github.com/triton-fused-ops/triton-fused-ops#readme"
Repository = "https://github.com/triton-fused-ops/triton-fused-ops.git"
Issues = "https://github.com/triton-fused-ops/triton-fused-ops/issues"
Changelog = "https://github.com/triton-fused-ops/triton-fused-ops/blob/main/CHANGELOG.md"
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["triton_ops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # Line too long (handled by black)
    "UP035", # Deprecated typing imports (for Python 3.9 compatibility)
    "UP006", # Use dict/list instead of Dict/List (for Python 3.9 compatibility)
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["F841"]  # Allow unused variables in examples
"triton_ops/kernels/*" = ["F841"]  # Allow unused variables in kernels (may be used for debugging)
"triton_ops/autotuner/*" = ["F841"]  # Allow unused variables in autotuner

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
